# sec-opendata-th

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
commands/: sec-categories.md  sec-fund-info.md  sec-funds.md  sec-nav.md  sec-request.md
scripts/: export_fund_research_data.py  sec_active_passive_study.py  sec_fund_research_export.py
secopendata/: __init__.py  cli.py  client.py  config.py  products.py
skills/sec-open-api/: SKILL.md
skills/sec-open-api/references/: bond.md  digital-asset.md  fund.md  license.md  one_report.md  pvd.md
skills/sec-opendata/: SKILL.md
tests/: test_active_passive_study.py  test_client.py  test_config.py  test_fund_research_exporter.py  test_products.py
