[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-opendata-th"
version = "0.1.0"
description = "Python client for the Thai SEC OpenAPI (api.sec.or.th): fund factsheets, daily NAV, and any SEC API product."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nutdnuy" }]
keywords = ["sec", "thailand", "finance", "funds", "nav", "opendata"]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.23"]

[project.scripts]
secopendata = "secopendata.cli:main"

[project.urls]
Homepage = "https://github.com/nutdnuy/sec-opendata-th"

[tool.setuptools.packages.find]
include = ["secopendata*"]
